@@ -154,6 +154,13 @@ The <a href="https://github.com/IgnorantGuru/spacefm/wiki">SpaceFM Wiki</a> cont
 </tr>
 
 <tr>
+<td><b>Foresight</b></td>
+<td>
+	Foresight Lxde uses SpaceFM as its default file manager; Foresight includes <a href="http://www.foresightlinux.se/wiki-en/index.php?title=Spacefm">spacefm</a> in its repositories
+</td>
+</tr>
+
+<tr>
 <td valign="top"><b>Gentoo</b></td>
 <td>
 	Gentoo's portage tree includes <a href="http://packages.gentoo.org/package/x11-misc/spacefm">spacefm</a>
