@@ -12,6 +12,7 @@
     shift-click selects range on desktop closes #47
     code review
     consistent 64bit file size support fixes #60
+    added Foresight Linux to README and manual closes #59
 0.7.4   2012-04-01:
     added git build instructions to README
     better standards compliance for data doc dirs fixes #8
